--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,14 @@
   "ConnectionStrings": {
       "DefaultConnection": "Host=localhost;Port=5432;Database=patient_management_db;Username=patient;Password=121788Patients"
   },
-  "Logging": {
+  "AWS": {
+        "BucketName": "patients-tree",
+        "AccessKey": "AKIAUP7RI5QI6QH64G6C",
+        "SecretKey": "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",
+        "Region": "us-east-2"
+    },
+  
+    "Logging": {
       "LogLevel": {
           "Default": "Information",
           "Microsoft.AspNetCore": "Warning"
