Added appointments logic for patients

--- a/PatientManagementSystem.csproj
+++ b/PatientManagementSystem.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a65418a3-9a06-49af-a869-28dbb1cc6fdc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
