--- a/appsettings.json
+++ b/appsettings.json
@@ -10,10 +10,13 @@
     },
   
     "Logging": {
-      "LogLevel": {
-          "Default": "Information",
-          "Microsoft.AspNetCore": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    },
+    "File": {
+      "Path": "/home/ubuntu/PatientManagementSystem/log.txt"
+    }
   },
   "AllowedHosts": "*"
 }
