--- a/PatientManagementSystem.csproj
+++ b/PatientManagementSystem.csproj
@@ -4,10 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-   <!-- Set dedicated intermediate and output directories -->
-    <IntermediateOutputPath>obj/build/</IntermediateOutputPath>
-    <OutputPath>bin/build/</OutputPath>
-    
+    <IntermediateOutputPath>$(MSBuildProjectDirectory)/obj/intermediate/</IntermediateOutputPath>
+    <OutputPath>$(MSBuildProjectDirectory)/bin/output/</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
