--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
       "DefaultConnection": "Host=localhost;Port=5432;Database=patient_management_db;Username=patient;Password=121788Patients"
   },
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": 52428800 // Set the limit to 50 MB
+    }
+  },
   "AWS": {
         "BucketName": "patients-tree",
         "AccessKey": "AKIAUP7RI5QI6QH64G6C",
