--- a/appsettings.json
+++ b/appsettings.json
@@ -13,11 +13,11 @@
         "SecretKey": "vetd07EzkSrhC7BI5oLEvaUpDYGc5DNNMePt+z1G",
         "Region": "us-east-2"
     },
-  
     "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     },
     "File": {
       "Path": "/home/ubuntu/PatientManagementSystem/log.txt"
