--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost;Port=5432;Database=patient_management_db;Username=patient;Password=121788Patients"
+      "DefaultConnection": "Host=localhost;Port=5432;Database=patient_management_db;Username=patient;Password=121788Patients",
+      "RedisConnection": "localhost:6379"
   },
   "Kestrel": {
     "Limits": {
